--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<p>こんちは</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>とりあえず進化するWebサイト</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap');
+      </style>
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <h1>とりあえず進化していくWebサイト</h1>
+    <p>とりあえず何書けば良いのかわからないのでコップを用意しました</p>
+    <img src="https://raw.githubusercontent.com/KopKouNet/with-ja/main/shokki_kamikoppu.png">
+    <p>色々勉強するためのサイトです。よろしくお願いします。</p>
+    <h2>更新履歴</h2>
+    <ul>
+        <li>2023/08/01 - 画像を追加しました。文章を編集しました。</li>
+    </ul>
+</body>
+</html>
