--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h2>更新履歴</h2>
     <ul>
         <li>2023/08/01 - 画像を追加しました。文章を編集しました。</li>
+        <li>2024/03/24 - このサイトを作ってもう半年になるんだな…と思いました</li>
     </ul>
 </body>
 </html>
