--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>とりあえず進化するWebサイト</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap');
-      </style>
-    <link rel="stylesheet" href="style.css">
-
+　　　<link rel="icon" href="favicon.ico">
 </head>
 <body>
     <h1>とりあえず進化していくWebサイト</h1>
