--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>とりあえず進化するWebサイト</title>
+    <title>KopKouNet's Room</title>
 　　　<link rel="icon" href="favicon.ico">
 </head>
 <body>
