--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 　　　<link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <h1>とりあえず進化していくWebサイト</h1>
+    <h1>KopKouNet's Room</h1>
     <p>とりあえず何書けば良いのかわからないのでコップを用意しました</p>
     <img src="https://raw.githubusercontent.com/KopKouNet/with-ja/main/shokki_kamikoppu.png">
     <p>色々勉強するためのサイトです。よろしくお願いします。</p>
