--- a/index.html
+++ b/index.html
@@ -8,13 +8,5 @@
 </head>
 <body>
     <h1>KopKouNet's Room</h1>
-    <p>とりあえず何書けば良いのかわからないのでコップを用意しました</p>
-    <img src="https://raw.githubusercontent.com/KopKouNet/with-ja/main/shokki_kamikoppu.png">
-    <p>色々勉強するためのサイトです。よろしくお願いします。</p>
-    <h2>更新履歴</h2>
-    <ul>
-        <li>2023/08/01 - 画像を追加しました。文章を編集しました。</li>
-        <li>2024/03/24 - このサイトを作ってもう半年になるんだな…と思いました</li>
-    </ul>
-</body>
-</html>
+    <p>サイトは移行しました。</p>
+    <p>新しいページは<p href="https://kopkounet.com/">こちら</p><p>です。</p>
