--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KopKouNet's Room</title>
-　　　<link rel="icon" href="favicon.ico">
+<meta charset="utf-8">
+<meta http-equiv="refresh" content="0;URL=https://kopkounet.com">
+<title>KopKouNet</title>
 </head>
-<body>
-    <h1>KopKouNet's Room</h1>
-    <p>サイトは移行しました。</p>
-    <p>新しいページは<p href="https://kopkounet.com/">こちら</p><p>です。</p>
+</html>
